fixed horizontal scroll bar on html

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
+html, body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 section {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: relative;
 }
 
