--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,8 +24,7 @@ html, body
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 100%;
+ 
 }
 
 #third-section {
@@ -37,15 +36,13 @@ html, body
 }
 
 #fourth-section {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   
   position: relative;
-  padding: 0 2%;
+ 
   /* border: 2px solid red !important; */
 }
 
